--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ntc_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NTC">
-        <activity android:name=".Show_devices"></activity>
+        <activity android:name=".Monitoring_devices"></activity>
+        <activity android:name=".Show_devices" />
         <activity android:name=".Add_devices" />
         <activity android:name=".MainActivity">
             <intent-filter>
