--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NTC">
-        <activity android:name=".Monitoring_devices"></activity>
+        <service
+            android:name=".RSSIScan_Service"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name=".Monitoring_devices_Activity" />
         <activity android:name=".Show_devices" />
-        <activity android:name=".Add_devices" />
+        <activity android:name=".Add_devices_Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
