--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation(name:'IODetectionLib-release', ext:'aar')
+    implementation 'org.adw.library:discrete-seekbar:1.0.1'
+    implementation 'com.opencsv:opencsv:4.6' // Here is opencsv library
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
