--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
-    implementation(name:'IODetectionLib-release', ext:'aar')
+    implementation(name:'IODetectionLib', ext:'aar')
     implementation 'org.adw.library:discrete-seekbar:1.0.1'
     implementation 'com.opencsv:opencsv:4.6' // Here is opencsv library
     testImplementation 'junit:junit:4.+'
